# smart-contract-workshop

./: .gitignore  Cargo.toml  Dockerfile  README.md  deploy-aemula-subscription.mjs  deploy-stoa-subscription.mjs
.github/workflows/: pysub-manifest.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  codegen_wasm.rs  dsl.rs  grammar.pest  ir.rs  lib.rs  main.rs  manifest.rs  metadata.rs  parser.rs  semantics.rs  serialize.rs
compiler/tests/: codegen.rs  semantics.rs  smoke.rs
contracts/bloxpay/: blox_pay.json  blox_pay.pysub  blox_pay.wasm  blox_pay.yml  debug-receipt.mjs  deploy.mjs  diag.mjs  native-transfer-test.mjs  package-lock.json  package.json  verify.mjs
contracts/praxis/: deploy.mjs  praxis.json  praxis.pysub  praxis.wasm  praxis.yml
docs/: TROUBLESHOOTING.md  runtime-abi.md
examples/: aemula_subscription.pysub  hello.pysub  stoa_subscription.pysub  token.pysub
logs/: repo_root.txt
runtime/: Cargo.toml
runtime/src/: lib.rs
tests/: aemula_subscription.yml  smoke_map.pysub  smoke_map.yml  stoa_subscription.yml  token_simple.pysub  token_simple.yml
