[package]
name = "pysub-compiler"
version = "0.1.0"
edition = "2021"
description = "Minimal pysub to WASM compiler (skeleton)"
license = "Apache-2.0"

[dependencies]
pest = { version = "2.7", default-features = false, features = ["std"] }
pest_derive = "2.7"
thiserror = "1.0"
wasm-encoder = "0.36"

[dev-dependencies]
wasmparser = "0.118"
