[package]
name = "pysub-compiler"
version = "0.1.0"
edition = "2021"
description = "Minimal pysub to WASM compiler (skeleton)"
license = "Apache-2.0"

[dependencies]
axiom-runtime = { path = "../../axiom-runtime/crates/axiom-runtime" }
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
fips204 = { version = "0.4", features = ["ml-dsa-44"] }
hex = "0.4"
pest = { version = "2.7", default-features = false, features = ["std"] }
pest_derive = "2.7"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
wasm-encoder = "0.36"

[dev-dependencies]
wasmparser = "0.118"
